# the-game

./: .gitmodules  CMakeLists.txt  the-game.sln
include/: Bullet.h  Enemy.h  Movable.h  Player.h
src/: Bullet.cpp  Enemy.cpp  GameObject.cpp  Movable.cpp  Player.cpp  Source.cpp
the-game/: Bullet.cpp  Bullet.h  CMakeLists.txt  Enemy.cpp  Enemy.h  GameObject.cpp  GameObject.h  Moveable.cpp  Moveable.h  Player.cpp  Player.h  Scene.cpp  Scene.h  Source.cpp  enemy_ut.cpp  moveable-ut.cpp  packages.config  the-game-lib-ut.vcxproj.filters  the-game-lib.vcxproj  the-game-lib.vcxproj.filters  the-game-ut.vcxproj  the-game.vcxproj  the-game.vcxproj.filters
the-game/res/: readme.txt
tools/polly/: .gitmodules
tools/polly/flags/: ios_nocodesign.cmake
tools/polly/os/: iphone.cmake
ut/: movable-ut.cpp
